Refactored start up and some apis
