# swagger/logger.swagger.json
@@ -26,7 +26,7 @@
   "paths": {
     "/logger/available_objects": {
       "get": {
-        "operationId": "GetSystemObjects",
+        "operationId": "ReadSystemObjects",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -52,7 +52,7 @@
     },
     "/logger/config": {
       "get": {
-        "operationId": "GetAll",
+        "operationId": "SearchConfig",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -113,7 +113,7 @@
         ]
       },
       "delete": {
-        "operationId": "DeleteBulk",
+        "operationId": "DeleteConfigBulk",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -138,7 +138,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/loggerDeleteConfigsRequest"
+              "$ref": "#/definitions/loggerDeleteConfigBulkRequest"
             }
           }
         ],
@@ -147,7 +147,7 @@
         ]
       },
       "post": {
-        "operationId": "Insert",
+        "operationId": "CreateConfig",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -172,7 +172,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/loggerInsertConfigRequest"
+              "$ref": "#/definitions/loggerCreateConfigRequest"
             }
           }
         ],
@@ -183,7 +183,7 @@
     },
     "/logger/config/{config_id}": {
       "get": {
-        "operationId": "GetById",
+        "operationId": "ReadConfig",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -216,7 +216,7 @@
         ]
       },
       "delete": {
-        "operationId": "Delete",
+        "operationId": "DeleteConfig",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -249,7 +249,7 @@
         ]
       },
       "put": {
-        "operationId": "Update",
+        "operationId": "UpdateConfig",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -290,7 +290,7 @@
         ]
       },
       "patch": {
-        "operationId": "PatchUpdate",
+        "operationId": "PatchConfig",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -322,7 +322,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/loggerPatchUpdateConfigRequest"
+              "$ref": "#/definitions/loggerPatchConfigRequest"
             }
           }
         ],
@@ -333,7 +333,7 @@
     },
     "/logger/config/{config_id}/logs": {
       "get": {
-        "operationId": "GetByConfigId",
+        "operationId": "SearchLogByConfigId",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -355,6 +355,7 @@
         "parameters": [
           {
             "name": "config_id",
+            "description": "REQUIRED filter",
             "in": "path",
             "required": true,
             "type": "integer",
@@ -394,6 +395,54 @@
             "items": {
               "type": "string"
             }
+          },
+          {
+            "name": "user.id",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "user.name",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "action",
+            "description": "GENERAL filters.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "DEFAULT_NO_ACTION",
+              "CREATE",
+              "UPDATE",
+              "READ",
+              "DELETE"
+            ],
+            "default": "DEFAULT_NO_ACTION"
+          },
+          {
+            "name": "userIp",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "dateFrom",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "dateTo",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -403,7 +452,7 @@
     },
     "/logger/user/{user_id}/logs": {
       "get": {
-        "operationId": "GetByUserId",
+        "operationId": "SearchLogByUserId",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -425,6 +474,7 @@
         "parameters": [
           {
             "name": "user_id",
+            "description": "REQUIRED filter",
             "in": "path",
             "required": true,
             "type": "integer",
@@ -464,6 +514,54 @@
             "items": {
               "type": "string"
             }
+          },
+          {
+            "name": "object.id",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "object.name",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "action",
+            "description": "GENERAL filters.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "DEFAULT_NO_ACTION",
+              "CREATE",
+              "UPDATE",
+              "READ",
+              "DELETE"
+            ],
+            "default": "DEFAULT_NO_ACTION"
+          },
+          {
+            "name": "userIp",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "dateFrom",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "dateTo",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -473,6 +571,17 @@
     }
   },
   "definitions": {
+    "loggerACTION": {
+      "type": "string",
+      "enum": [
+        "DEFAULT_NO_ACTION",
+        "CREATE",
+        "UPDATE",
+        "READ",
+        "DELETE"
+      ],
+      "default": "DEFAULT_NO_ACTION"
+    },
     "loggerConfig": {
       "type": "object",
       "properties": {
@@ -497,6 +606,9 @@
         },
         "storage": {
           "$ref": "#/definitions/loggerLookup"
+        },
+        "description": {
+          "type": "string"
         }
       }
     },
@@ -519,22 +631,7 @@
         }
       }
     },
-    "loggerDeleteConfigsRequest": {
-      "type": "object",
-      "properties": {
-        "ids": {
-          "type": "array",
-          "items": {
-            "type": "integer",
-            "format": "int32"
-          }
-        }
-      }
-    },
-    "loggerEmpty": {
-      "type": "object"
-    },
-    "loggerInsertConfigRequest": {
+    "loggerCreateConfigRequest": {
       "type": "object",
       "properties": {
         "object": {
@@ -554,8 +651,26 @@
         },
         "storage": {
           "$ref": "#/definitions/loggerLookup"
+        },
+        "description": {
+          "type": "string"
         }
       }
+    },
+    "loggerDeleteConfigBulkRequest": {
+      "type": "object",
+      "properties": {
+        "ids": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      }
+    },
+    "loggerEmpty": {
+      "type": "object"
     },
     "loggerLog": {
       "type": "object",
@@ -568,7 +683,8 @@
           "type": "string"
         },
         "date": {
-          "type": "string"
+          "type": "string",
+          "format": "int64"
         },
         "user": {
           "$ref": "#/definitions/loggerLookup"
@@ -582,6 +698,9 @@
         "config_id": {
           "type": "integer",
           "format": "int32"
+        },
+        "record": {
+          "$ref": "#/definitions/loggerLookup"
         }
       }
     },
@@ -616,7 +735,7 @@
         }
       }
     },
-    "loggerPatchUpdateConfigRequest": {
+    "loggerPatchConfigRequest": {
       "type": "object",
       "properties": {
         "config_id": {
@@ -637,6 +756,9 @@
         },
         "storage": {
           "$ref": "#/definitions/loggerLookup"
+        },
+        "description": {
+          "type": "string"
         },
         "fields": {
           "type": "array",
@@ -678,6 +800,9 @@
         },
         "storage": {
           "$ref": "#/definitions/loggerLookup"
+        },
+        "description": {
+          "type": "string"
         }
       }
     }
